--- a/style.css
+++ b/style.css
@@ -26,6 +26,13 @@
     flex-direction: column;
   }
 
+  @media (max-width: 900px) , (max-height: 540px) {
+    .card-container {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   .card {
     width: 100%;
     height: 100%;
@@ -107,13 +114,6 @@
 
   .button:hover {
     background-color: #d0d0d0;
-  }
-
-  @media (max-width: 900px) or (max-height: 540px) {
-    .card-container {
-      width: 100%;
-      height: 100%;
-    }
   }
 
 /* ########## MENU ########## */
