--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,40 +1,46 @@
 /* ########## MENU ########## */
 
+.front-menu-container, .back-menu-container {
+  display: none;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
 .menu {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
+  width: 100%;
+  height: 100%;
 }
 
-.menu-textarea {
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    background-color: #212121;
-    color: #fff;
-    border-radius: inherit;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    outline: none;
-    border: none;
-    font-size: 24px;
-    resize: none;
+.menu-main {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  background-color: #212121;
+  color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  outline: none;
+  border: none;
+  font-size: 24px;
+  resize: none;
+  border-radius: 20px;
 }
 
-.menu-textarea:focus, .button:focus, .card:focus, .menu-textbox:focus{
+.button:focus, .card:focus, .menu-main:focus{
   outline: #6c00c5 solid 2px;
 }
 
 /* ########## ALT MENU ########## */
 
-.m2-container{
+.menu-alt-container{
   width: 100%;
   height: 100%;
   overflow: hidden;
-  border-radius: inherit;
   display: none;
+  border-radius: 20px;
 }
 
-.front-menu2, .back-menu2{
+.front-menu-alt, .back-menu-alt{
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -43,18 +49,13 @@
   gap: 10px;
   width: 100%;
   height: 100%;
-  border-radius: inherit;
   background-color: #212121;
   overflow: scroll;
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
 
-/* .front-menu2::-webkit-scrollbar, .back-menu2::-webkit-scrollbar{
-  display: block;
-} */
-
-.menu2-pair{
+.menu-alt-pair{
   position: relative;
   width: 100%;
   height: auto;
@@ -64,36 +65,7 @@
   align-items: center;
 }
 
-.menu2-word, .menu2-translation{
-  width: 100%;
-  height: 100%;
-  min-height: 50px;
-  background-color: #313131;
-  padding: 5px;
-}
-
-.menu2-copy, .menu2-copy:hover, .menu2-copy:focus{
-  background-color: green;
-  color: #fff;
-}
-
-.del{
-  background-color: #313131;
-  height: 100%;
-}
-
-.del:hover, .del:focus{
-  background-color: tomato;
-}
-
-.add{
-  background-color: #313131;
-}
-
-.add:hover, .add:focus{
-  background-color: lightgreen;
-}
-
+/* Add pair pannel */
 .menu-textbox{
   width: 100%;
   height: 100%;
@@ -108,4 +80,45 @@
   outline: none;
   transition: background-color 0.3s;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.add{
+  background-color: #313131;
+}
+
+.add:hover, .add:focus{
+  background-color: lightgreen;
+}
+
+/* All pairs pannel */
+.menu-alt-list{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  gap: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+.menu-alt-word, .menu-alt-translation{
+  width: 100%;
+  height: 100%;
+  min-height: 50px;
+  background-color: #313131;
+  padding: 5px;
+}
+
+.menu-alt-button-copy, .menu-alt-button-copy:hover, .menu-alt-button-copy:focus{
+  background-color: lightgreen;
+  color: #000;
+}
+
+.del{
+  background-color: #313131;
+  height: 100%;
+}
+
+.del:hover, .del:focus{
+  background-color: tomato;
 }
