--- a/styles/style.css
+++ b/styles/style.css
@@ -3,32 +3,33 @@
 @import url(menu.css);
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  padding: 20px;
+  background-color: #0f0f0f;
+}
+
+@media (max-device-width: 1024px) and (orientation: portrait) ,  (max-device-width: 1024px) and (orientation: landscape){
+  .card-container {
+    width: 100%;
+    height: 100%;
   }
 
-  body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    padding: 20px;
-    background-color: #0f0f0f;
+  .button:hover {
+    background-color: #fff;
   }
 
-  @media (max-device-width: 1024px) and (orientation: portrait) ,  (max-device-width: 1024px) and (orientation: landscape){
-    .card-container {
-      width: 100%;
-      height: 100%;
-    }
-
-    .button:hover {
-      background-color: #fff;
-    }
-
-    .menu-textarea:focus, .button:focus, .card:focus {
-      outline: none;
-    }
+  .menu-main:focus, .button:focus, .card:focus {
+    outline: none;
   }
+}
